Shenandoah: Shenandoah should not mark through weak roots

XMLWordPrintable

    • gc
    • b24

      After moving weak root processing into concurrent phase, Shenandoah should no longer marks through weak roots, even when class unloading is disabled, given weak root processing no longer contributes to latency.

      There are a couple of bugs:
      1) ShenandoahRootVerifier was not updated to reflect the change.
      The problem did not show up due to SH::parallel_cleaning() uses wrong flag to determine if it should cleanup weak roots, and it will be addressed in separate CR.

      2) Concurrent roots scanner should not mark through string dedup roots.

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: