8255847: Shenandoah: Shenandoah root verifier's roots_do() should not include weak roots